# -SZE-MOSZE-2020-Bukottak_busszuja

./: .gitignore  Arnykiraly.json  Blood_Raven.json  Damage.h  Damage_8h_source.html  Dark_Wanderer.json  Dockerfile  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  Hosarkany.json  JSON.cpp  JSON.h  JSON_8h_source.html  Jsonparser.cpp  Jsonparser.h  Jsonparser_8h_source.html  Kalandor.cpp  Kalandor.h  Kalandor_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  PreparedGame.cpp  PreparedGame.h  PreparedGame_8h_source.html  README.md  Report.md  Source.cpp  (+120 more)
.github/workflows/: GoogleTest.yml  (+2 more)
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
tests/: Arnykiraly.json  Atoksarkany.json  CMakeLists.txt  Dark_Wanderer.json  Exodia.json  Hosarkany.json  Kardvadasz.json  Langpallos.json  Obelisk.json  Scenario.json  Sotetvarazslo.json  Zombie.json  badscenario.json  markedmap.txt  test.cpp
units/: Hosarkany.json  Sotetvarazslo.json
videos/: Report.md
